[package]
name = "bitcoin_wallet"
version = "0.1.0"
authors = ["georgantas <18753033+Georgantas@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
description = "Generate a bitcoin paper wallet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
bitcoin = "0.23.0"
